# Codsoft-Projects

./: Readme.md  index.html  index2.html  index3.html
enterprise-realtime-chat-app-pro/backend/: CMakeLists.txt  Dockerfile
enterprise-web-scraper-app-enhanced/: API_DOCS.md  CMakeLists.txt  Jenkinsfile  README.md  docker-compose.ci.yml  docker-compose.yml
enterprise-web-scraper-app-enhanced/config/: .env.example
enterprise-web-scraper-app-enhanced/database/: init.sql  seed.sql
enterprise-web-scraper-app-enhanced/docker/: Dockerfile.backend  Dockerfile.frontend  nginx.conf
enterprise-web-scraper-app-enhanced/src/: app.h  main.cpp
enterprise-web-scraper-app-enhanced/tests/: CMakeLists.txt
enterprise-web-scraper-app-pro/: CMakeLists.txt  END FILE  database.cpp  database.h  main.cpp  scraper.cpp  scraper.h
fullstack-cms-system-complete/: .env.example  API.md  ARCHITECTURE.md  CMakeLists.txt  DEPLOYMENT.md  Dockerfile  END FILE  README.md  docker-compose.yml
fullstack-cms-system-complete/config/: config.json
fullstack-cms-system-complete/database/: init_db.sh
fullstack-cms-system-complete/src/: main.cc
fullstack-ml-utils-system-complete/backend-cpp/: .env.example  CMakeLists.txt  Dockerfile  vcpkg.json
modern-auth-system-platform-advanced/backend/: .env.backend.example  CMakeLists.txt  Dockerfile.backend  vcpkg.json
modern-cms-platform-pro/src/: CMakeLists.txt  config.json  main.cc
modern-cms-platform-pro/test/: CMakeLists.txt
modern-devops-automation-platform-optimized/: .env.example  .gitignore  CMakeLists.txt  Dockerfile  END FILE  README.md  docker-compose.yml
modern-devops-automation-platform-optimized/config/: app_config.json
modern-devops-automation-platform-optimized/db/: schema.sql  seed.sql
modern-devops-automation-platform-optimized/docs/: API.md  ARCHITECTURE.md  DEPLOYMENT.md
modern-devops-automation-platform-optimized/scripts/: db_init.sh  run_tests.sh
modern-devops-automation-platform-optimized/src/: main.cpp
modern-devops-automation-platform-optimized/web/: index.html  script.js
modern-ml-utils-platform-enhanced/: .gitlab-ci.yml  API.md  ARCHITECTURE.md  CMakeLists.txt  DEPLOYMENT.md  Dockerfile  END FILE  README.md  docker-compose.yml  requirements.txt
modern-ml-utils-platform-enhanced/config/: default.json
modern-ml-utils-platform-enhanced/scripts/: generate_jwt.py
modern-ml-utils-platform-enhanced/src/: main.cpp
modern-mobile-backend-platform-pro/: .env.example  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml
modern-mobile-backend-platform-pro/config/: default.json
modern-mobile-backend-platform-pro/src/: main.cc
modern-mobile-backend-platform-pro/tests/: CMakeLists.txt
modern-payment-gateway-platform-plus/: CMakeLists.txt  END FILE  README.md  main.cpp
modern-payment-gateway-platform-plus/payment_processor/: .env.example  Dockerfile  README.md  alembic.ini  docker-compose.yml  locustfile.py  requirements.txt  seed_data.py
modern-performance-monitor-platform-complete/backend/: CMakeLists.txt
production-data-visualization-backend-pro/server/: CMakeLists.txt  Dockerfile
production-ml-utils-backend-complete/backend/: .env.example  CMakeLists.txt  Dockerfile  jest.config.ts  ormconfig.json  package.json  tsconfig.json
production-mobile-backend-backend-advanced/: CMakeLists.txt  END FILE  README.md
production-payment-gateway-backend-plus/: .env.example  API.md  ARCHITECTURE.md  CMakeLists.txt  DEPLOYMENT.md  Dockerfile  END FILE  README.md  docker-compose.yml  jest.config.ts  package.json  tsconfig.json
production-payment-gateway-backend-plus/ci/: github_actions.yml
production-payment-gateway-backend-plus/database/: schema.sql  seed_data.sql
production-payment-gateway-backend-plus/docker/: Dockerfile  docker-compose.yml
production-payment-gateway-backend-plus/docs/: API.md  ARCHITECTURE.md  DEPLOYMENT.md  README.md
production-payment-gateway-backend-plus/frontend/: package.json  tsconfig.json
production-payment-gateway-backend-plus/src/: app.ts  main.cpp  server.ts
production-payment-gateway-backend-plus/tests/: setup.ts
production-payment-gateway-backend-plus/tools/: setup_db.sh
production-security-framework-backend-pro/backend/: .env.example  CMakeLists.txt  Dockerfile  alembic.ini  conanfile.txt  requirements.txt
scalable-auth-system-solution-enhanced/: .env.example  AuthController.java (Spring Boot Controller)  AuthService.java (Service Layer)  CMakeLists.txt  Dockerfile  END FILE  README.md  User.java (Entity)  docker-compose.yml  pom.xml
scalable-auth-system-solution-enhanced/docs/: API.md  ARCHITECTURE.md  DEPLOYMENT.md
scalable-auth-system-solution-enhanced/frontend/: index.html  script.js  style.css
scalable-auth-system-solution-enhanced/src/: main.cpp
scalable-auth-system-solution-enhanced/tests/: test_auth_service.cpp  test_database.cpp  test_main.cpp  test_user_model.cpp
scalable-cms-solution-enhanced/: CMakeLists.txt  Dockerfile  END FILE  database.sql (Example SQLite Schema)  server.cpp
scalable-cms-solution-plus/backend/: .env.example  CMakeLists.txt  README.md
scalable-db-optimization-solution-plus/: .env.example  API.md  ARCHITECTURE.md  CMakeLists.txt  DEPLOYMENT.md  END FILE  README.md  docker-compose.yml
scalable-db-optimization-solution-plus/db_migrations/: V1_create_initial_schema.sql  V2_add_admin_user.sql  V3_add_pg_stat_statements_extension.sql  apply_migrations.sh
scalable-db-optimization-solution-plus/docker/: Dockerfile  entrypoint.sh
scalable-db-optimization-solution-plus/src/: app.cpp  app.h  main.cpp
scalable-db-optimization-solution-plus/tests/: main.cpp  test_api_integration.cpp  test_auth_service.cpp  test_target_db_service.cpp
scalable-mobile-backend-solution-advanced/: .env.example  CMakeLists.txt  README.md
scalable-mobile-backend-solution-advanced/ci-cd/: github-actions.yml
scalable-mobile-backend-solution-advanced/src/: main.cc
scalable-rest-api-solution-pro/: .env.example  API_DOCS.md  ARCHITECTURE.md  CMakeLists.txt  DEPLOYMENT.md  END FILE  README.md  docker-compose.yml  package.json  requirements.txt
(+8758 files in other folders)
