```cmake
cmake_minimum_required(VERSION 3.10)
project(CMS)

# Add necessary libraries here (e.g., for networking, database, JSON)
# find_package(Boost REQUIRED COMPONENTS system filesystem)
# find_package(SQLite3 REQUIRED)


add_executable(cms server.cpp)
# ... link libraries ...
# target_link_libraries(cms Boost::system Boost::filesystem SQLite3::SQLite3)
```